# espn_rust

./: .gitignore  Cargo.toml  README.md
examples/: find_unmapped_stats.rs  trawl_public_leagues_for_unmapped_stats.rs
src/: api.rs  client.rs  free_agent.rs  id_maps.rs  league.rs  lib.rs  main.rs  matchup.rs  members.rs  player.rs  team.rs  week.rs
src/api/: client.rs  id_maps.rs  league.rs  league_data.rs  matchup.rs  members.rs  player.rs  team.rs  week.rs
src/examples/: find_unmapped_stats.rs
