[package]
name = "espn-fantasy-football"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11.20", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
serde_json = "1.0.107"
serde_path_to_error = "0.1.14"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
serde_path_to_error = "0.1.14"
clap = { version = "4.4.6", features = ["derive", "env"] }
